# esp32-sensor-logger

./: .gitignore  CMakeLists.txt  README.md
main/: CMakeLists.txt  common_types.h  main.c
main/processing_task/: processing_task.c  processing_task.h
main/sensor_task/: sensor_task.c  sensor_task.h
main/state_machine/: state_machine.c  state_machine.h
main/uart_task/: uart_task.c  uart_task.h
